[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-address"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.12"',
]
description = 'A Django app to manage physical addresses'
readme = 'file: README.rst'
authors = [
    {name = "Jishnu Prasad Samal", email = "dev@jishnupsamal.me"},
]
license = {text = 'MIT'}
keywords = ["address", "drf-address"]
classifiers = [
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 5.0', # Replace "X.Y" as appropriate
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content']
requires-python = '>=3.10'

[project.urls]
Homepage = "https://github.com/jishnupsamal/drf-address"
Issues = "https://github.com/jishnupsamal/drf-address/issues"

[tool.setuptools.packages.find]
include = ["docs*"]